--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3.7'
 services:
   openui:
     image: ghcr.io/wandb/openui
+    depends_on:
+      ollama:
+        condition: service_started
     environment:
       - OLLAMA_HOST=http://ollama:11434
     volumes:
@@ -11,6 +14,9 @@ services:
 
   openwebui:
     image: ghcr.io/open-webui/open-webui:0.5
+    depends_on:
+      ollama:
+        condition: service_started
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
     volumes:
